fix align on more and less in collection description

--- a/src/assets/scss/_home-collection.scss
+++ b/src/assets/scss/_home-collection.scss
@@ -106,7 +106,7 @@
                 }
                 &.full-story {
                     height: auto;
-                    margin-bottom: 1rem;
+                    margin-bottom: 2rem;
                 }
             }
         }
